app/assets/stylesheets/main.scss
header,
section,
footer,
.container {
  @include outer-container;
  margin-bottom: 2em;
  margin-left: auto;
  margin-right: auto;
}
section,
footer {
  padding-left: 30px;
  padding-right: 30px;
  a {
    padding-left: 10px;
  }
  a:first-of-type {
    padding-left: 0;
  }
}
header {
  margin-top: 25px;
}
nav {
  text-align: right;
}
.wrapper {
  padding: 0.5em 0 1em 0;
  @include display(flex);
}
.wrapper-space_between {
  @include justify-content(space-between);
}
.alpha {
  text-align: center;
  margin: 0 auto;
}
.entry-form {
  margin: 10px 0;
}
.field-container {
  @include display(flex);
}
.field {
  margin-right: 0.5em;
}
.field:last-child {
  margin-right: 0;
}
.alert {
  text-align: center;
  border-radius: 0.5em;
}
.title {
  margin-bottom: 1em;
  h1 {
    margin-bottom: 2px;
  }
}
#queue-id {
  margin-bottom: 2em;
}
.header-with-subtext {
  margin-bottom: 0;
}
.subtext {
  margin-bottom: 24px;
}
.admin {
  padding-left: 15px;
  padding-right: 15px;
}

